made code for reading in data and creating first simple viz

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -123,23 +123,31 @@ data <- read_csv("data/toy_penguins.csv") |>
          bill_length_scaled = as.double(scale(bill_length_mm)))
 
 penguin_data <- data |> select(flipper_length_scaled, bill_length_scaled)
+write_csv(penguin_data, "data/penguins_scaled.csv")
 ```
 
 \index{seed!set.seed}
 
-```{r 10-clustering, warning = F, message=F}
+```{r 10-clustering, warning = FALSE, message = FALSE}
 library(tidyverse)
 set.seed(1)
+```
 
+Now we can load and preview the data.
+
+```{r, message = FALSE, warning = FALSE}
+penguin_data <- read_csv("data/penguins_scaled.csv")
 penguin_data
 ```
 
-```{r 10-toy-example-plot, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Subset data of penguin scaled bill length versus flipper length."}
-base <- ggplot(data, aes(x = flipper_length_scaled, y = bill_length_scaled)) +
+Next, we can create a scatter plot using this data set to see if we can use
+data visualization to detect subtypes or groups in our data set.
+
+```{r 10-toy-example-plot, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Subset data of penguin scaled bill length versus flipper length."}
+ggplot(data, aes(x = flipper_length_scaled, y = bill_length_scaled)) +
   geom_point() +
   xlab("Flipper Length (scaled)") +
   ylab("Bill Length (scaled)")
-base
 ```
 
 Based \index{ggplot}\index{ggplot!geom\_point} on the visualization in Figure \@ref(fig:10-toy-example-plot), we might
@@ -222,6 +230,11 @@ In the first cluster from the example, there are `r nrow(clus1)` data points. Th
 in Figure \@ref(fig:10-toy-example-clus1-center).
 
 ```{r 10-toy-example-clus1-center, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Cluster 1 from the `penguin_data` data set example. Observations are in blue, with the cluster center highlighted in red."}
+base <- ggplot(data, aes(x = flipper_length_scaled, y = bill_length_scaled)) +
+  geom_point() +
+  xlab("Flipper Length (scaled)") +
+  ylab("Bill Length (scaled)")
+
 base <- ggplot(clus1) +
   geom_point(aes(y = bill_length_scaled, x = flipper_length_scaled),  col = "dodgerblue3") +
   labs(x = "Flipper Length (scaled)", y = "Bill Length (scaled)") +
