removed duplicated new term bolding

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -342,7 +342,7 @@ population_parameters
 ```
 The price per night of all Airbnb rentals in Vancouver, BC 
 is \$`r round(population_parameters$pop_mean,2)`, on average. This value is our
-**population parameter** since we are calculating it using the population data. \index{population!parameter}
+population parameter since we are calculating it using the population data. \index{population!parameter}
 
 Now suppose we did not have access to the population data (which is usually the
 case!), yet we wanted to estimate the mean price per night. We could answer
@@ -375,7 +375,7 @@ estimates
 
 The average value of the sample of size 40 
 is \$`r round(estimates$sample_mean, 2)`.  This 
-number is a **point estimate** for the mean of the full population.
+number is a point estimate for the mean of the full population.
 Recall that the population mean was 
 \$`r round(population_parameters$pop_mean,2)`. So our estimate was fairly close to
 the population parameter: the mean was about 
@@ -389,7 +389,7 @@ took another random sample from the population, our estimate's value might
 change. So then, did we just get lucky with our point estimate above?  How much
 does our estimate vary across different samples of size 40 in this example?
 Again, since we have access to the population, we can take many samples and
-plot the **sampling distribution** of \index{sampling distribution} sample means for samples of size 40 to
+plot the sampling distribution of \index{sampling distribution} sample means for samples of size 40 to
 get a sense for this variation. In this case, we'll use 20,000 samples of size
 40.
 
