fixed figure units in wrangling

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -515,7 +515,7 @@ that speak each language most at work for each region.
 Figure \@ref(fig:img-separate) 
 outlines what we need to specify to use `separate`.
 
-``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function", out.width="1100", fig.retina = 2}
+``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the separate function", out.width="1100pt", fig.retina = 2}
 knitr::include_graphics("img/separate_function.jpeg")
 ```
 
@@ -949,7 +949,7 @@ cleaned already, in a few short lines of code, we can use `ggplot` to create a
 data visualization to answer this question! Here we create a bar chart to represent the proportions for
 each region and color the proportions by language.
 
-```{r 02-plot, fig.width = 7, fig.height = 2.5}
+```{r 02-plot, out.width = "70%"}
 ggplot(
   english_langs,
   aes(
