added working dir index term to version ctl

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -139,7 +139,7 @@ image_read("img/vc1-no-changes.png") %>%
   image_crop("3632x2000")
 ```
 
-Both copies of the repository have a **working directory** 
+Both copies of the repository have a **working directory** \index{working directory} 
 where you can create, store, edit, and delete 
 files (e.g., `analysis.ipynb` in Figure \@ref(fig:vc1-no-changes)).
 Both copies of the repository also maintain a full project history 
