--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -32,7 +32,7 @@ By the end of the chapter, readers will be able to:
 
 ## The regression problem
 
-Regression, like classification, is a predictive \index{predictive} problem setting where we want
+Regression, like classification, is a predictive \index{predictive question} problem setting where we want
 to use past information to predict future observations. But in the case of
 regression, the goal is to predict *numerical* values instead of *categorical* values. 
 The variable that you want to predict is often called the *response variable*. \index{response variable}
