predictive to predictive ques

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -32,7 +32,7 @@ By the end of the chapter, readers will be able to:
 
 
 ## The classification problem
-In many situations, we want to make predictions \index{predictive} based on the current situation
+In many situations, we want to make predictions \index{predictive question} based on the current situation
 as well as past experiences. For instance, a doctor may want to diagnose a
 patient as either diseased or healthy based on their symptoms and the doctor's
 past experience with patients; an email provider might want to tag a given
